🐛 FIX: css issues and add overflow hidden for containers

--- a/src/components/user/RenderNode.css
+++ b/src/components/user/RenderNode.css
@@ -16,8 +16,8 @@
 }
 
 svg {
-	width: 15px;
-	height: 15px;
+	width: 18px;
+	height: 18px;
 }
 
 .btn {
@@ -51,6 +51,8 @@ svg {
 	max-height: 100%;
 	min-height: 50px;
 	overflow-wrap: break-word;
+	flex-basis: auto;
+	overflow: hidden;
 }
 
 .component-selected {
